Fixe issue with overflow of buttons while in waiting room

--- a/ui/src/styles/index.css
+++ b/ui/src/styles/index.css
@@ -392,6 +392,7 @@
   padding: 2px 5px;
   direction: ltr;
   max-width: 70%;
+  width: 100%;
 }
 .element-name span {
   overflow: hidden;
@@ -427,7 +428,6 @@
   flex-direction: column;
   justify-content: center;
   height: 90%;
-  max-height: 600px;
   width: 85%;
   box-shadow: 0px 2px 4px rgba(7, 4, 146, 0.1), 0px 24px 60px rgba(6, 47, 125, 0.05), 0px 12px 24px rgba(27, 59, 119, 0.05);
   margin-bottom: 24px;
@@ -478,6 +478,13 @@
   margin: 16px;
 }
 
+.button-placment {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 .body {
   width: 100%;
   height: 100%;
@@ -488,11 +495,16 @@
 }
 
 .main-content {
-  margin: 36px 16px;
+  margin: 0px 16px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+}
+@media screen and (max-width: 600px) {
+  .main-content .main-content {
+    margin: 0px 8px;
+  }
 }
 
 .main-buttons {
@@ -577,6 +589,11 @@
 .paper-create:hover {
   box-shadow: 0px 2px 4px rgba(5, 3, 124, 0.158), 0px 24px 60px rgba(6, 48, 125, 0.295), 0px 12px 24px rgba(27, 59, 119, 0.103);
   transition: all 0.5s ease-in;
+}
+@media screen and (max-width: 600px) {
+  .paper-create {
+    margin-top: 0px;
+  }
 }
 
 .contact {
